# MAPDA

./: .gitignore  CMakeLists.txt  ExampleMaze  Makefile  README.md  maze-10-20.txt  maze-10-5.txt
includes/maze/: init.h  maze.h  mazeCell.h
includes/pathfinding/: pathfinding.h
includes/utils/: bits.h  random.h
src/: main.c
src/maze/: init.c  maze.c  mazeCell.c
src/pathfinding/: pathfinding.c
